fix lable collaps

--- a/backend/templates/quince/assets/css/groups/group-access.scss
+++ b/backend/templates/quince/assets/css/groups/group-access.scss
@@ -59,7 +59,6 @@
     width: 100%;
     position: relative;
     cursor: pointer;
-    background: #F3F6F9;
     padding: 10px 6px;
     border-radius: 7px;
     i{
@@ -67,5 +66,12 @@
         left: 4px;
         top: 13px;
         color: #a1a1a1;
+        @include transition( linear , 0.2s)
+    }
+}
+
+.rotate_angle{
+    i{
+        @include transform(rotate(-90deg));
     }
 }
